# python-crazyhusk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  labeler.yml  mypy.yml  release.yml  tests.yml
ci/: fix_win_coverage_paths.py
crazyhusk/: __init__.py  __main__.py  cli.py  code.py  config.py  engine.py  logs.py  module.py  plugin.py  project.py
crazyhusk/tests/: test_cli.py  test_code.py  test_config.py  test_engine.py  test_linux.py  test_logs.py  test_mac.py  test_module.py  test_packages.py  test_plugin.py  test_project.py  test_windows.py
crazyhusk/windows/: engine.py
docs/: api.rst  codeofconduct.md  conf.py  conf.py.bak  index.md  index.rst.bak  reference.md  requirements.txt  usage.md
img/: logo_info.txt
src/crazyhusk/: __init__.py  __main__.py  __version__.py  build.py  cli.py  code.py  config.py  engine.py  importsettings.py  logs.py  module.py  plugin.py  project.py  render.py  reports.py
src/crazyhusk/commandlet/: __init__.py  base.py  deriveddatacache.py  importassets.py  updategameproject.py
src/crazyhusk/linux/: __init__.py
src/crazyhusk/mac/: __init__.py
src/crazyhusk/windows/: __init__.py  engine.py
tests/: conftest.py  test_build.py  test_cli.py  test_code.py  test_config.py  test_engine.py  test_linux.py  test_logs.py  test_mac.py  test_main.py  test_module.py  test_packages.py  test_plugin.py  test_project.py  test_render.py  test_reports.py  test_windows.py
