[metadata]
name = crazyhusk
description = Dependency-free Python object wrappers for working with Unreal Engine
long_description = file: README.md
url = https://github.com/nhaines-pro/python-crazyhusk.git
author = Nick Haines
author_email = nhaines.pro@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    crazyhusk = crazyhusk.cli:run
crazyhusk.commands =
    list_engines = crazyhusk.engine:UnrealEngine.list_engines
crazyhusk.find_engines =
    find_egl_engines_windows = crazyhusk.engine:find_egl_engines_windows
    find_registered_engines_windows = crazyhusk.engine:find_registered_engines_windows