[metadata]
name = crazyhusk
description = Dependency-free Python object wrappers for working with Unreal Engine
long_description = file: README.md
url = https://github.com/nhaines-pro/python-crazyhusk.git
author = Nick Haines
author_email = nhaines.pro@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    crazyhusk = crazyhusk.cli:run
crazyhusk.commands =
    list-engines = crazyhusk.engine:UnrealEngine.log_engine_list
crazyhusk.engine.finders =
    find_egl_engine_windows = crazyhusk.windows.engine:find_egl_engine_windows
    find_registered_engines_windows = crazyhusk.windows.engine:find_registered_engines_windows
crazyhusk.engine.listers =
    list_egl_engines_windows = crazyhusk.windows.engine:list_egl_engines_windows
    list_registered_engines_windows = crazyhusk.windows.engine:list_registered_engines_windows
crazyhusk.engine.sanitizers =
    engine_exe_exists = crazyhusk.engine:UnrealEngine.engine_exe_exists
    engine_exe_common_path = crazyhusk.engine:UnrealEngine.engine_exe_common_path
crazyhusk.engine.validators =
    engine_dir_exists = crazyhusk.engine:UnrealEngine.engine_dir_exists
crazyhusk.logs.filters =
    FilterUBTWarnings = crazyhusk.logs:FilterUBTWarnings
    FilterUE4Logs = crazyhusk.logs:FilterUE4Logs
crazyhusk.plugin.validators =
    plugin_file_exists = crazyhusk.plugin:UnrealPlugin.plugin_file_exists
    valid_plugin_file_extension = crazyhusk.plugin:UnrealPlugin.valid_plugin_file_extension
crazyhusk.project.validators =
    project_file_exists = crazyhusk.project:UnrealProject.project_file_exists
    valid_project_file_extension = crazyhusk.project:UnrealProject.valid_project_file_extension